PBStools Changes
==============================
Authors: RH  = Rowan Haigh
         NO  = Norm Olsen
         LL  = Lisa Lacko
         JTS = Jon T. Schnute
------------------------------

1.25  2013-05-08
  - Moved object `.PBSserver` form the `sql` directory to the `R` directory in `M01_Utility.r`. (RH 5/8)
  - Updated script `Rqpdf.bat` to utilize ghostcript's `gswin32c.exe` AND QPDF's `qpdf.exe`, paralleling the process in tools::compactPDF. (RH 5/8)
  - Added two new functions to manipulate files: `countLines` and `subsetFile`. (RH 5/8)
  - Added a new argument `only.sql` to function `requestAges` to only get the database information (survey data, commercial and survey catch). (RH 5/2)
  - Updated User's Guide and vignette that build the User's Guide. (RH 4/30)
  - Added a small script called `qpdf.bat` in directory `inst/scripts` to compress PDF files (e.g., User's Guide). (RH 4/30)
  - Added a new directory `documentation` under `trunk` to mirror other PBS package repositories. (RH 4/30)
  - Requires R-3.0.0 (RH 4/29)

1.24  2013-04-04
  - Fixed bug in function `trend` - specifically in function `.trend.trendy` where object `ttlist` was created with `sapply` and `simplify` was NOT set to `FALSE`. (RH 4/4)
  - Modified function `trend` - fixed bugs, updated the GUI, added support for multiple image file formats. (RH 4/3)
  - Modified SQL queries to Oracle via SQL Server using variable format `@~sppcode` rather than `@sppcode`; this inserts two single-quote delimiters rather than one. (RH 3/20)
  - Modified function `buildCatch` to stitch together EPS barplot results using the function `collectFigs`. (RH 3/15)
  - Modified function `getData` to handle multiple species substitutions in SQL code that queries Oracle databases via OPENQUERY in SQL Server. (RH 3/14)
  - Added new function `plotTertiary` to plot compositional data of n-dimensions into a polygonal shape with n sides. (RH 3/13)