@@ -1,6 +1,6 @@
 Package: PBStools
 Version: 1.25
-Date: 2013-05-08
+Date: 2013-06-27
 Title: Tools for Semi-Serious Marine Scientists et al.
 Author: Rowan Haigh, Jon T. Schnute, Norm Olsen, and Lisa Lacko
 Maintainer: Rowan Haigh <rowan.haigh@dfo-mpo.gc.ca>
